# muzik

./: .envrc  .gitignore  .sqllsrc.json  Cargo.toml  LICENSE  README.md  build.rs
.config/: config.json5
.github/workflows/: cd.yml
migrations/2023-12-30-083327_init/: down.sql  up.sql
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  database.rs  layouts.rs  main.rs  mode.rs  models.rs  schema.rs  tui.rs  utils.rs
src/components/: download.rs  fps.rs  general.rs  home.rs  manager.rs
